--- a/core/templates/core/minutes_list.html
+++ b/core/templates/core/minutes_list.html
@@ -5,7 +5,7 @@
 <h1>{{ page.title }}</h1>
 <ul>
     {% for minute in minutes_list %}
-        <li><a href="{% pageurl minute %}">{{ minute.title }} ({{ minute.date }})</a></li>
+        <li><a href="{% pageurl minute %}">{{ minute.title }} ({{ minute.date }}) {% if minute.labels.all %}({{ minute.labels.all|join:"," }}) {% endif %}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
