--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {# Global stylesheets #}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/wagtail_1327.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/myHPI.css' %}">
 
     {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
@@ -73,7 +73,7 @@
 </div>
 
 {# Global javascript #}
-<script type="text/javascript" src="{% static 'js/wagtail_1327.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
