--- a/myhpi/polls/templates/polls/vote.html
+++ b/myhpi/polls/templates/polls/vote.html
@@ -1,7 +1,7 @@
 <form method="post">
 {% csrf_token %}
 {% for choice in page.choices.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+    <input type={% if page.max_allowed_answers > 1 %} "checkbox" {% else %} "radio" {% endif %} name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
     <label for="choice{{ forloop.counter }}">{{ choice.text }}</label><br />
 {% endfor %}
 <input type="submit" value="Vote" />
