--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -68,6 +68,16 @@
 
 <div class="row">
     <div class="col-12">
+        <div id="messages">
+            {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
         {% block content %}{% endblock %}
     </div>
 </div>
