--- a/myhpi/polls/templates/polls/poll.html
+++ b/myhpi/polls/templates/polls/poll.html
@@ -10,8 +10,10 @@
             <h2> {{ page.question }} </h2>
             {% if can_vote %}
                 {% include "polls/vote.html" %}
-            {% else %}
+            {% elif page.results_visible %}
                 {% include "polls/results.html" %}
+            {% else %}
+                <p> You already voted and the results are not visible yet. </p>
             {% endif %}
         </div>
         <div class="col-3">
@@ -19,8 +21,10 @@
             <p>{{ page.start_date }}</p>
             <h4>End Date</h4>
             <p>{{ page.end_date }}</p>
-            <h4>Date</h4>
-            <p>{{ page.date }}</p>
+            <h4>Number of participants</h4>
+            <p>{{ page.participants.count }}</p>
+            <h4>Number of votes</h4>
+            <p>{{ page.num_votes }}</p>
             <h4>Table of contents</h4>
             {{ parsed_md.1 }}
         </div>
