--- a/myhpi/static/css/myHPI_admin.css
+++ b/myhpi/static/css/myHPI_admin.css
@@ -1,3 +1,8 @@
 .action-set-privacy, .privacy-indicator {
     display: none;
 }
+
+.editor-toolbar.fullscreen, .CodeMirror-fullscreen {
+    left: 200px !important ;
+    bottom: 40px !important;
+}
