--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -1,98 +1,140 @@
 {% load static wagtailuserbar %}
 {% load wagtailcore_tags %}
 {% load core_extras %}
+{% load compress %}
 
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>
         {% block title %}
-            {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
+        {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
         {% endblock %}
         {% block title_suffix %}
-            {% with self.get_site.site_name as site_name %}
-                {% if site_name %}- {{ site_name }}{% endif %}
-            {% endwith %}
+        {% with self.get_site.site_name as site_name %}
+        {% if site_name %}- {{ site_name }}{% endif %}
+        {% endwith %}
         {% endblock %}
     </title>
-    <meta name="description" content=""/>
+    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {# Global stylesheets #}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/myHPI.css' %}">
+    {% compress css %}
+    <link type="text/x-scss" href="{% static 'scss/myHPI.scss' %}" rel="stylesheet" media="screen">
+    {% endcompress %}
 
     {% block extra_css %}
-        {# Override this in templates to add extra stylesheets #}
+    {# Override this in templates to add extra stylesheets #}
     {% endblock %}
 </head>
 
 <body class="{% block body_class %}{% endblock %} container">
-{% wagtailuserbar %}
+    {% wagtailuserbar %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% pageurl root_page %}">myHPI</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="{% pageurl root_page %}">Home</a></li>
-            {% for page in all_pages %}
-                {% with page|menu_children as menu_children %}
-                    {% if menu_children %}
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light container p-0 mb-2">
+        <div class="row py-3">
+            <div class="col-1">
+                <a class="navbar-brand" href="{% pageurl root_page %}">
+                    <img src="{% static 'img/FSR_DE_color.svg' %}" class="w-100 align-middle" alt="">
+                </a>
+            </div>
+            <div class="col">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav me-auto mb-3 mb-lg-0">
+                        {% for page in all_pages %}
+                        {% with page|menu_children as menu_children %}
+                        {% if menu_children %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{ page.title }}
+                            <a class="nav-link"
+                                id="nav-dropdown-{{ page.id }}"
+                                href="#nav-submenu-{{ page.id }}"
+                                data-bs-toggle="collapse"
+                                aria-controls="nav-submenu-{{ page.id }}"
+                                aria-expanded="false">
+                                <span class="dropdown-toggle">{{ page.title }}</span>
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                {% for child in menu_children %}
-                                    <a class="dropdown-item" href="{% pageurl child %}">{{ child.title }}</a>
-                                {% endfor %}
-                            </div>
                         </li>
-                    {% else %}
+                        {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% pageurl page %}">{{ page.title }}</a>
+                            <a class="nav-link" href="{% pageurl page %}">{{ page.title }} </a>
                         </li>
+                        {% endif %}
+                        {% endwith %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="nav-half-bottom row mx-0">
+            <div class="col-1"></div>
+            <div class="col">
+                <div class="nav-submenu-container col-5">
+                    {% for page in all_pages %}
+                    {% with page|menu_children as menu_children %}
+                    {% if menu_children %}
+                    <ul id="nav-submenu-{{ page.id }}"
+                        class="nav-submenu container p-0 collapse"
+                        aria-labelledby="nav-dropdown-{{ page.id }}"
+                        data-bs-parent="#navbar">
+                        {% for child in menu_children %}
+                        {% with child|menu_children as sub_children %}
+                        {% if sub_children %}
+                        <li class="row">
+                            <a
+                                class="nav-submenu-item nav-head col py-1"
+                                href="{% pageurl child %}">
+                                {{ child.title}}
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="row">
+                            <a class="nav-submenu-item col py-1" href="{% pageurl child %}">{{ child.title }}</a>
+                        </li>
+                        {% endif %}
+                        {% endwith %}
+                        {% endfor %}
+                    </ul>
                     {% endif %}
-                {% endwith %}
-            {% endfor %}
-        </ul>
-    </div>
-</nav>
+                    {% endwith %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </nav>
 
-<div class="row">
-    <div class="col-12">
-        <div id="messages">
-            {% for message in messages %}
+    <div class="row">
+        <div class="col-12">
+            <div id="messages">
+                {% for message in messages %}
                 <div class="alert {{ message.tags }} alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     {{ message }}
                 </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
+            {% block content %}{% endblock %}
         </div>
-        {% block content %}{% endblock %}
     </div>
-</div>
+    </div>
 
-{# Global javascript #}
-<script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
+    {# Global javascript #}
+    <script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
-{% block extra_js %}
+    {% block extra_js %}
     {# Override this in templates to add extra javascript #}
-{% endblock %}
+    {% endblock %}
 </body>
+
 </html>
