--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -2,7 +2,7 @@
 {% load wagtailcore_tags %}
 {% load wagtailuserbar %}
 {% load core_extras %}
-{% load compress %}
+{% load compile_static %}
 {% load bootstrap_icons %}
 
 <!DOCTYPE html>
@@ -24,9 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {# Global stylesheets #}
-    {% compress css %}
-        <link type="text/x-scss" href="{% static 'scss/myHPI.scss' %}" rel="stylesheet">
-    {% endcompress %}
+    <link type="text/css" href="{% static "scss/myHPI.scss"|compile %}" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'css/myHPI.css' %}">
 
     {% block extra_css %}
