--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -2,12 +2,15 @@
 {% load wagtailmarkdown %}
 
 {% block content %}
-    <div class="row">
+    <div class="row minutes-container">
         {% with page.text|markdown as parsed_md %}
-        <div class="col-9">
+        <div class="print-shown minutes-title">
+        <h1>{{  page.title }}</h1>
+        </div>
+        <div class="col-9 minutes-text">
             {{ parsed_md.0 }}
         </div>
-        <div class="col-3">
+        <div class="col-3 minutes-meta">
             <h4>Date</h4>
             <p>{{ page.date }}</p>
             <h4>Moderator</h4>
@@ -20,7 +23,7 @@
                     <li>{{ participant.get_full_name }}</li>
                 {% endfor %}
             </ul>
-            <h4>Table of contents</h4>
+            <h4 class="print-none">Table of contents</h4>
             {{ parsed_md.1 }}
         </div>
         {% endwith %}
