--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -18,7 +18,7 @@
                 <h1 class="toc-title">Zuletzt bearbeitet</h1>
                 {{ page.last_published_at|date:"d.m.Y, H:i" }}
             </aside>
-            <aside class="side-panel border-accent toc-container">
+            <aside class="side-panel border-accent toc-container d-print-none">
                 <h1 class="toc-title">Inhaltsverzeichnis</h1>
                 {{ parsed_md.1 }}
             </aside>
