--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -25,7 +25,7 @@
 
     {# Global stylesheets #}
     {% compress css %}
-    <link type="text/x-scss" href="{% static 'scss/myHPI.scss' %}" rel="stylesheet" media="screen">
+        <link type="text/x-scss" href="{% static 'scss/myHPI.scss' %}" rel="stylesheet">
     {% endcompress %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/myHPI.css' %}">
 
@@ -37,7 +37,7 @@
 <body class="bg-background myhpi-accent-yellow {% block body_class %}{% endblock %}">
     {% wagtailuserbar %}
 
-    <nav class="navbar-myhpi container-lg page print-none">
+    <nav class="navbar-myhpi container-lg page d-print-none">
         <div class="navbar-top bg-white">
             {% with all_pages|all_sub_menu_pages_by_id as sub_pages_by_level_and_id %}
             <div class="page-content d-flex">
@@ -72,6 +72,7 @@
 
             {% if self.get_ancestors|length > 1 %}
             <nav aria-label="breadcrumb"
+                 class="d-print-none"
                 style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,{% filter urlencode|slice:" 43:" %}{% bs_icon 'chevron-right' size="8" %}{% endfilter %} &#34;);">
                 <ol class="breadcrumb">
                     {% for ancestor_page in self.get_ancestors %}
