--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -17,8 +17,10 @@
             <aside class="side-panel border-accent">
                 <h1 class="toc-title">Zuletzt bearbeitet</h1>
                 {{ page.last_published_at|date:"d.m.Y, H:i" }}
-                <i>von</i>
-                {{ page.last_edited_by }}
+                {% if page.author_visible %}
+                    <i>von</i>
+                    {{ page.last_edited_by }}
+                {% endif %}
             </aside>
             <aside class="side-panel border-accent toc-container d-print-none">
                 <h1 class="toc-title">Inhaltsverzeichnis</h1>
