--- a/myhpi/core/templates/core/minutes_list.html
+++ b/myhpi/core/templates/core/minutes_list.html
@@ -4,8 +4,25 @@
 {% block content %}
 <h1>{{ page.title }}</h1>
 <ul>
+    <table class="table table-striped">
     {% for minute in minutes_list %}
-        <li><a href="{% pageurl minute %}">{{ minute.title }} ({{ minute.date }}) {% if minute.labels.all %}({{ minute.labels.all|join:"," }}) {% endif %}</a></li>
+        <tr>
+            <td><a href="{% pageurl minute %}">{{ minute.date|date:"d.m.Y" }}</a></td>
+            <td>
+                {% if not minute.live %}
+                    <span title="Draft" aria-hidden="true">⚠️</span>
+                {% endif %}
+            </td>
+            <td>
+                {% if minute.labels.all %}
+                    {% for label in minute.labels.all %}
+                        <span class="badge label-badge">{{ label }}</span>
+                    {% endfor %}
+                {% endif %}
+            </td>
+            <td><a href="{% pageurl minute %}">{{ minute.title }}</a></td>
+        </tr>
     {% endfor %}
+    </table>
 </ul>
 {% endblock %}
