--- a/myhpi/core/templates/core/minutes_list.html
+++ b/myhpi/core/templates/core/minutes_list.html
@@ -3,26 +3,27 @@
 
 {% block content %}
 <h1>{{ page.title }}</h1>
-<ul>
-    <table class="table table-striped">
-    {% for minute in minutes_list %}
-        <tr>
-            <td><a href="{% pageurl minute %}">{{ minute.date|date:"d.m.Y" }}</a></td>
-            <td>
-                {% if not minute.live %}
-                    <span title="Draft" aria-hidden="true">⚠️</span>
-                {% endif %}
-            </td>
-            <td>
-                {% if minute.labels.all %}
-                    {% for label in minute.labels.all %}
-                        <span class="badge label-badge">{{ label }}</span>
-                    {% endfor %}
-                {% endif %}
-            </td>
-            <td><a href="{% pageurl minute %}">{{ minute.title }}</a></td>
-        </tr>
+    {% for year,minutes in minutes_by_years.items %}
+        <h3 id="year{{ year }}">{{ year }}</h3>
+        <table class="table table-striped">
+        {% for minute in minutes %}
+            <tr>
+                <td><a href="{% pageurl minute %}">{{ minute.date|date:"d.m.Y" }}</a></td>
+                <td>
+                    {% if not minute.live %}
+                        <span title="Draft" aria-hidden="true">⚠️</span>
+                    {% endif %}
+                </td>
+                <td>
+                    {% if minute.labels.all %}
+                        {% for label in minute.labels.all %}
+                            <span class="badge label-badge">{{ label }}</span>
+                        {% endfor %}
+                    {% endif %}
+                </td>
+                <td><a href="{% pageurl minute %}">{{ minute.title }}</a></td>
+            </tr>
+        {% endfor %}
+        </table>
     {% endfor %}
-    </table>
-</ul>
 {% endblock %}
