fix ToC and abbr

--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% load wagtailmarkdown %}
+{% load core_extras %}
 
 {% block content %}
+{% with page.body|markdown as parsed_md %}
 <div class="row">
     <div class="col-9">
         <h1 class="page-title">
@@ -9,7 +10,7 @@
                 {{ page.title }}
             </span>
         </h1>
-        {{ page.body|markdown }}
+        {{ parsed_md.0 }}
     </div>
     <div class="col-3">
         <div class="side-panel-container">
@@ -23,9 +24,10 @@
             </aside>
             <aside class="side-panel border-accent toc-container d-print-none">
                 <h1 class="toc-title">Inhaltsverzeichnis</h1>
-
+                {{ parsed_md.1 }}
             </aside>
         </div>
     </div>
 </div>
+{% endwith %}
 {% endblock %}
