--- a/myhpi/tenca_django/templates/tenca_django/delete_list.html
+++ b/myhpi/tenca_django/templates/tenca_django/delete_list.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load bootstrap4 %}
 {% load i18n %}
 
 {% block title %}
@@ -17,9 +16,9 @@
 	{% endblocktrans %}</p>
 	<form method="post">
 		{% csrf_token %}
-		{% buttons %}
+		<div class="form-group">
 			<button type="submit" name="confirm" class="btn btn-danger">{% trans "Delete" %}</button>
 			<a class="btn btn-secondary" href="{% url "tenca_django:tenca_manage_list" mailing_list.list_id %}">{% trans "Cancel" %}</a>
-		{% endbuttons %}
+		</div>
 	</form>
 {% endblock %}
