--- a/myhpi/tenca_django/templates/tenca_django/manage_list.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_list.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load tenca_extras %}
-{% load bootstrap4 %}
 {% load i18n %}
 
 {% block title %}
@@ -26,13 +25,27 @@
 	</div>
 
 	<h3>{% trans "List options" %}</h3>
-	<form method="post">
-		{% csrf_token %}
-		{% bootstrap_form form %}
-		{% buttons %}
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <div class="form-check">
+                <input type="checkbox" name="notsubscribed_allowed_to_post" class="form-check-input" id="id_notsubscribed_allowed_to_post" checked="">
+                <label class="form-check-label" for="id_notsubscribed_allowed_to_post">
+                    Not subscribed users are allowed to post.
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input type="checkbox" name="replies_addressed_to_list" class="form-check-input" id="id_replies_addressed_to_list">
+                <label class="form-check-label" for="id_replies_addressed_to_list">
+                    Replies are addressed to the list per default.
+                </label>
+            </div>
+        </div>
+		<div class="form-group">
 			<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-			<a class="btn btn-danger" href="{% url "tenca_django:tenca_delete_list" mailing_list.list_id %}">{% trans "Delete list" %}</a>
-		{% endbuttons %}
+            <a class="btn btn-danger" href="{% url "tenca_django:tenca_delete_list" mailing_list.list_id %}">{% trans "Delete list" %}</a>		</div>
 	</form>
 
 	<h4 class="mt-2">{% trans "Members" %}</h4>
